# Researcher_agent

./: .env.example  .gitignore  Dockerfile  LICENSE  New Text Document.txt  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci-cd.yml
backend/: agent_engine.py  alembic.ini  auth.py  database.py  main.py  models.py  pytest.ini  requirements.txt  schemas.py  tools.py
backend/agents/: agent_engine.py
backend/alembic/: env.py
backend/core/: __init__.py  cache.py  config.py  logging.py  rate_limit.py
backend/routes/: auth.py  bookmarks.py  chat.py  files.py  share.py
backend/services/: background_tasks.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_tools.py
backend/tools/: __init__.py  document_tools.py  file_tools.py  research_tools.py
backend/uploads/: 37dd6d2c-d3ae-4b3f-ab4c-25b7c94c3aaa.pptx  6f86725e-00d9-4088-82ed-9e830666cfc3.ppt
frontend/: Dockerfile
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/app/auth/: auth.module.css  page.tsx
frontend/app/chat/: chat.module.css  page.tsx
frontend/components/: LoadingSpinner.module.css  LoadingSpinner.tsx  Toast.module.css  Toast.tsx
uploads/: hey.docx  my_identity.docx
