[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.125.0",
    "google-genai>=1.56.0",
    "google-generativeai>=0.8.6",
    "groq>=1.0.0",
    "httpx>=0.28.1",
    "openai>=1.0.0",
    "openai-agents>=0.0.1",
    "passlib>=1.7.4",
    "pillow>=12.0.0",
    "pyaudio>=0.2.14",
    "pymupdf>=1.26.7",
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.21",
    "python-pptx>=1.0.2",
    "pyttsx3>=2.90",
    "reportlab>=4.4.6",
    "google-search-results>=2.4.0",
    "speechrecognition>=3.14.3",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.1",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "bandit>=1.8.0",
    "fakeredis>=2.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["backend"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise NotImplementedError"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "N802", "N803", "N806", "B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
